@@ -1,5 +1,5 @@
 [versions]
-crate_server = 0.49.2
+crate_server = 0.50.3
 
 Jinja2 = 2.7.3
 MarkupSafe = 0.23
@@ -7,8 +7,8 @@ Sphinx = 1.2.3
 appdirs = 1.4.0
 argparse = 1.1
 collective.recipe.omelette = 0.16
-crate = 0.13.2
-crate-docs-theme = 0.3.8
+crate = 0.13.4
+crate-docs-theme = 0.4.1
 docutils = 0.12
 gp.recipe.tox = 0.3
 hexagonit.recipe.download = 1.7
